--- a/archetype.yaml
+++ b/archetype.yaml
@@ -1,5 +1,5 @@
 ---
-description: "TypeScript Svelt NextJS Basic"
+description: "TypeScript Svelt Basic"
 authors: ["Jimmie Fulton <jimmie@ybor.ai>, Jose Pimienta <jose@ybor.ai"]
 languages: []
 frameworks: []
