--- a/contents/base/{{ project-name }}/.github/workflows/build-main.yaml
+++ b/contents/base/{{ project-name }}/.github/workflows/build-main.yaml
@@ -40,7 +40,7 @@ jobs:
 
     with:
       registry: ${{'{'}}{ vars.ARTIFACTORY_HOSTNAME }}
-      image-name: '{{ org-name }}-docker/applications/{{ project-name }}-server'
+      image-name: ${{'{'}}{ vars.ARTIFACTORY_PROJECT }}-docker/applications/{{ project-name }}-server
       context: "."
       dockerfile: ./Dockerfile
       tags: |
